--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
